# V-Agent

./: .env.example  .gitignore  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CONTRIBUTING.md  CREDITS.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY.md  automator.py  build.bat  config.example.json  index.html  llm_provider.py  package-lock.json  package.json  platform_utils.py  requirements.txt  setup.iss  start.bat  vagent.py  vercel.json  vite.config.js
.github/workflows/: release.yml
api/: chat.py
assets/: README.txt
assets/settings/: default.json
crates/agent_skills/: agent_skills.rs
crates/etw_tracing/: etw_tracing.rs
crates/zed/: Cargo.toml  build.rs
docs/src/: SUMMARY.md  all-actions.md  appearance.md  command-palette.md  completions.md  configuring-languages.md  configuring-zed.md  debugger.md  dev-containers.md  development.md  diagnostics.md  editing-code.md  environment.md  extensions.md  finding-navigating.md  getting-started.md  git.md  globs.md  helix.md  icon-themes.md  installation.md  key-bindings.md  languages.md  linux.md  macos.md  modelines.md  multibuffers.md  outline-panel.md  performance.md  repl.md  (+18 more)
installer/: README.md  install.ps1  install.sh
packaging/: README.md
sidecar/: agent_loop.py  build.sh  context_manager.py  llm_provider.py  memory.py  model_router.py  rag.py  vagent_sidecar.py
src/: App.jsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/wix/: License.rtf  main.wxs
tools/: agent_eval.py  make_icon.py  prep_logo.py
(+429 files in other folders)
