[package]
name = "v-agent"
version = "0.9.2"
description = "V-Agent — local-first AI coding agent"
authors = ["otzpt"]
edition = "2021"

[lib]
name = "v_agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
portable-pty = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
regex = "1"
zip    = { version = "2", default-features = false, features = ["deflate"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
